[package]
name = "cronic"
version = "0.1.0"
authors = ["Avery Wagar <ajmw.subs@gmail.com>"]
edition = "2018"
repository = "https://github.com/ajmwagar/cronic"
license = "MIT"
readme = "./README.md"
description = """
A cron-enabled task scheduler for `async` Rust.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cron = "0.7.0"
tokio = { version = "1.1.1", features = ["time"] }
chrono = "0.4.19"
futures-util = "0.3.12"

[dev-dependencies]
tokio = { version = "1.1.1", features = ["full"] }
